fix(layout): SD-4144, SD-4213 Fix for couple of layout issues

--- a/scripts/superdesk-ingest/styles/settings.less
+++ b/scripts/superdesk-ingest/styles/settings.less
@@ -235,7 +235,7 @@
         margin-top: 10px;
         max-width: 100%;
         li {
-            margin: 0 5px 5px 0;
+            margin: 0 0 5px 0;
             .actions {
                 margin-right: -30px;
             }
@@ -255,6 +255,10 @@
                 margin-right: 10px;
             }
         }
+        .field > label {
+            display: block;
+            margin-bottom: 10px;
+        }
     }
 
     .action-tab {
@@ -266,7 +270,6 @@
     }
 
     .add {
-        margin-top: -3px;
         position: absolute;
         padding: 0;
         margin-left: 10px;
